# itmo_product_hack

./: README.md  analytics_to_context.py  bot.py  init_data.json  main.py  pyproject.toml
app_logic/: ai_utils.py  bl.py  client_utils.py
mail_processor/: Dockerfile  mail_processor.py
sales_bot_env/: pyvenv.cfg
src/: config.py
src/business_logic/: docker-compose.yml
src/business_logic/app_logic/: Dockerfile  ai_utils.py  bl.py  client_utils.py  email_utils.py  start.sh  tg_utils.py
src/business_logic/mail_processor/: mail_processor.py
src/business_logic/telegram_bot/: bot.py
src/modules/: analytics_to_context.py
src/notebooks/: .env  llm_mongo_test.ipynb  llm_use.ipynb
src/services/: docker-compose.yml  init_data.json  populate_data.py
src/services/app_logic/: Dockerfile  ai_utils.py  bl.py  client_utils.py  cons.py  email_utils.py  model.py  requirements.txt  system_ptompt.txt  tg_utils.py
src/services/mail_processor/: Dockerfile  mail_processor.py
src/services/telegram_bot/: Dockerfile  requirements.txt
src/services/tg_processor/: bot.py  tg_server.py
